Cancel browser process scroll bubbling when new gestures start

There are known issues with scroll bubbling causing a
RenderWidgetHostImpl to receive multiple GestureScrollBegin events
without seeing a GestureScrollEnd in between. This CL tightens up the
conditions during which inter-process scroll bubbling can occur to
prevent that situation.

BUG=631135, 627238

Review-Url: https://codereview.chromium.org/2193033003
Cr-Commit-Position: refs/heads/master@{#409289}

Former-commit-id: 7b0c6f8719ccd5a23cf551b9413d7554673cb802